      Use a common routine to parse numerical arguments and check its value.
    Source code:
      Drop support for building with versions of libpcap that don't
        support all the libpcap 1.0 APIs.
      Use %zu when printing a sizeof to squelch compiler warnings
      Remove unused missing/strdup.c.
      (FIXME: somebody please wrap the line below just before the release)
      AODV, AppleTalk, BOOTP, CHDLC, DCCP, EAP, EGP, EIGRP, ForCES, Geneve, GRE, ICMP, Juniper, L2TP, LISP, mobile, MSDP, NetFlow, NFLOG, NTP, OLSR, pflog, PGM, RADIUS, RIP, RSVP, SCTP, SNMP, TCP, UDP, vsock: Modernize packet parsing style
      DCCP, EGP: Replace custom code with tok2str()
      UDP: Clean up address and port printing.
      AppleTalk: Declutter appletalk.h.
      IEEE 802.11: Simplify handle_action().
      Provide GET_ macros for 4-byte and 8-byte floating-point numbers
        and use them rather than custom code
      Disregard setlinebuf(3), always use setvbuf(3).
      Change Sun RPC code licence to BSD-3-Clause.
      Fix "ip broadcast" netmask byte order with the -f flag.
      Remove pcap-missing.h.
    Building and testing:
      Autoconf: Remove detection of early IPv6 stacks.
      Detect OS IPv6 support using AF_INET6 only.
      Remove all remaining support for BSD/OS, IRIX, {OSF/1, Digital Unix,
        Tru64 Unix}, SINIX and Ultrix.
      Fix compiling on GNU/Hurd.
      Make illumos build warning-free.
      Makefile.in: Update the .c.o build rule (Remove hacks for old SunOS 4).
      Autoconf: fix buggy tests for ether_ntohost().
      Makefile.in: Do not install a version-suffixed tcpdump binary if the
        .devel file does not exists.
      tests: On HP-UX use "diff -c" by default.
      autogen.sh: Allow to configure Autoconf warnings.
      autogen.sh: Delete all trailing blank lines at end of configure.
      Reimplement the tests similarly to libpcap.
    Documentation:
      man: Clarify the "any" pseudo-interface further.
